# fastapi-template

./: .cspell-project-words.txt  .dockerignore  .env.development  .env.example  .env.template  .firebaserc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Makefile  README.md  cspell.config.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  pipeline-test.md  pyproject.toml  test_precommit_temp.py
.claude/: settings.local.json
.config/: cspell-project-words.txt  cspell.config.yaml  trivyignore
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  dependabot.yml  deploy.yml  environment-setup.yml  monitoring.yml  release.yml  security-scan.yml
config/: __init__.py  firestore.indexes.json  firestore.rules  logging.json  settings.py
config/classification/: engines.yaml  keywords.yaml  patterns.yaml
config/environments/: .env.example
config/extraction/: blacklisted_terms.yaml  location_patterns.yaml  name_patterns.yaml  service_keywords.yaml
deployment/: docker-compose.dev.yml
docs/: architecture-diagrams.md  architecture-evaluation-report.md  architecture-improvement-plan.md  architecture-principles.md  deployment-setup.md  development-roadmap.md  documentation-polish-plan.md  faq.md  fp-pocket-guide.md  getting-started.md  onboarding-strategy.md  removal-checklist.md  test-refactoring-roadmap.md  testing-strategy.md
docs/archive/: COMMIT_LOG.md  COMMIT_LOG_2025_08_27.md  commit-log.md  neighbour-approved-roadmap.md
docs/diagrams/: README.md  clean-architecture.mmd  container-architecture.mmd  database-firestore.mmd  database-multi.mmd  database-postgresql.mmd  deployment-development.mmd  deployment-production.mmd  event-driven-architecture.mmd  monitoring-observability.mmd  request-flow.mmd  security-architecture.mmd  system-overview.mmd  testing-architecture.mmd
docs/research/: claude-code-tools-guide.md  neighbour-approved-architecture.md  neighbour-approved-deployment-modules.md  neighbour-approved-how-it-works.md  neighbour-approved-meritocracy.md  neighbour-approved-miro-wireframe.html  neighbour-approved-mission-values.md  neighbour-approved-next-steps.md  neighbour-approved-pitch-angles.md  neighbour-approved-product-strategy.md  neighbour-approved-security-monitoring.md  neighbour-approved-starter.md  neighbour-approved-technical.md
frontend/: README.md  index.html
monitoring/: prometheus.yml
monitoring/grafana/datasources/: prometheus.yml
nginx/: nginx.prod.conf
postman/: Development.postman_environment.json  Neighbour-Approved-Collection.postman_collection.json  Production.postman_environment.json  README.md
scripts/: browse_firestore.py  check_firestore_data.py  demo_queries.py  dev-setup.sh  query_firestore.py  seed_firestore.py  start-services.sh  test-environments.sh
scripts/deployment/: deploy-prod.sh
scripts/maintenance/: backup.sh
scripts/postgres/: init-dev.sql  init.sql
src/: __init__.py  main.py
src/application/services/: __init__.py  contact_parser.py  context_attribution.py  message_processor.py  sample_service.py
src/application/services/nlp/: __init__.py  mention_extractor.py  message_classifier.py  provider_matcher.py  summary_generator.py
src/application/services/whatsapp/: __init__.py  response_generator.py
src/domain/: __init__.py  health.py  types.py
src/domain/events/: __init__.py  base.py  endorsement_events.py  order_events.py  persistence_events.py  phone_number_events.py  provider_events.py  registry.py  user_events.py
src/domain/models/: __init__.py  endorsement.py  extracted_mention.py  group_summary.py  message_classification.py  provider.py  user.py
src/domain/repositories/: __init__.py  endorsement_repository.py  provider_repository.py
src/domain/rules/: __init__.py
src/domain/value_objects/: __init__.py  email.py  endorsement_id.py  group_id.py  money.py  phone_number.py  provider_id.py
src/infrastructure/: __init__.py  dependencies.py  initialization.py  service_registry.py
src/infrastructure/api/: __init__.py  app_factory.py  exception_handlers.py
src/infrastructure/events/: __init__.py  observability_publisher.py
src/infrastructure/feature_flags/: __init__.py  manager.py
src/infrastructure/messaging/: __init__.py  sample_notification_service.py
src/infrastructure/observability/: __init__.py  health_checker.py  logger.py  metrics.py
src/infrastructure/persistence/: __init__.py  firestore_client.py  repository_factory.py  repository_provider.py
src/infrastructure/persistence/migrations/: base.py  (+2 more)
src/infrastructure/security/: __init__.py  api_key_validator.py  rate_limiter.py  webhook_verifier.py
src/infrastructure/whatsapp/: __init__.py  green_api_client.py
src/interfaces/api/: __init__.py
src/shared/: __init__.py  exceptions.py
tests/: conftest.py
tests/behaviours/: test_data_extraction.py  test_endorsement_capture.py  test_message_classification.py  test_provider_discovery.py  test_provider_lifecycle.py
tests/contracts/: test_admin_api.py  test_health_api.py  test_sample_api.py  test_webhook_api.py
tests/integration/: test_api_integration.py  test_contact_card_end_to_end.py  test_contact_webhook_integration.py  test_green_api_error_integration.py  test_provider_matcher_integration.py  test_provider_repository_integration.py
tests/resilience/: test_data_validation.py  test_error_handling.py  test_security_boundaries.py
tests/unit/: test_main.py
tests/unit/config/: test_settings.py
tests/unit/domain/: test_endorsement_context_attribution.py  test_health.py  test_types.py  test_value_objects.py
tests/unit/infrastructure/: test_dependencies.py  test_initialization.py  test_observability.py  test_service_registry.py
tests/unit/interfaces/: test_contact_webhook_schemas.py  test_green_api_error_handling.py  test_webhook_quoted_messages.py
(+63 files in other folders)
